20070727 configure.in,utils.[ch]: remove use of mmap(): added complexity for
	 no real benefit.
20070727 disk/plusd.c,divide.c,if1.c,if2.c,joystick.c,kempmouse.c,keyboard.c,
	 machines/specplus3.c,memory.c,module.c,periph.c,printer.c,scld.c,
	 simpleide.c,tape.c,ui/gtk/{browse.c,debugger.c,gtkjoystick.c,
	 gtkmouse.c,gtkui.c,pokefinder.c,rollback.c},z80/z80.c,zxatasp.c,
	 zxcf.c: some -Wextra tidyup (not finished yet).
20070729 menu_data.pl,printer.c,settings.pl,ui/gtk/{debugger.c,gtkjoystick.c,
	 gtkmouse.c,pokefinder.c,stock.c},z80/coretest.c: more -Wextra tidyup.
20070730 Makefile.am,configure.in,fuse.c,sound/{Makefile.am,alsasound.c,
	 aosound.c,coreaudiosound.c,dxsound.c,hpsound.c,lowlevel.h,nullsound.c,
	 osssound.c,sdlsound.c,sfifo.c,sound.c,sunsound.c},spectrum.c,timer.c:
	 move sound selection logic into configure.in (patch #1763265).
20070730 utils.c: mmap no longer used.
20070730 Makefile.am,configure.in,event.c,fuse.c,rzx.c,spectrum.c,tape.c,
	 timer.[ch],timer/{Makefile.am,sdl.c,timer.c,timer.h,unix.c,win32.c},
	 ui/gtk/gtkui.c,widget/widget.c: move timer code selection logic into
	 configure.in.
20070731 configure.in: fix spelling of ALSA (thanks, Gergely).
20070731 configure.in,compat/{Makefile.am,dirname.c,getopt.c,getopt1.c,
	 mkstemp.c}: move compatability detection logic into configure.in.
20070731 timer/{Makefile.am,sdl.c,unix.c,win32.c}: add missing properties and
	 fix initial comments (Stuart).
20070802 machines/tc2048.c: correct joystick port mask on TC2048 (verified on
         real hardware) (Fred).
20070803 configure.in,timer/timer.h: move timer header selection logic into
	 configure.in.
20070803 sound/alsasound.c: release code should not dump 100 lines of stuff
	 onto the console.
20070804 configure.in,fuse.c,compat/Makefile.am,compat/amiga/Makefile.am,
	 compat/morphos/{Makefile.am,osname.c},compat/unix/{Makefile.am,
	 osname.c},compat/win32/{Makefile.am,osname.c}: move OS name function
	 selection into configure.in.